ManagerBundle: Updated Bootstrap to 2.0.4

--- a/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
@@ -30,7 +30,9 @@
             </form>
 
             <nav>
+                {% if app.user != "" %}
                 {% render "MapbenderManagerBundle:Manager:menu" with { "request": app.request } %}
+                {% endif %}
             </nav>
         </header>
 
