--- a/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
@@ -5,6 +5,7 @@
     </li>
 {% endfor %}
 </ul>
+{% if app.user != "" %}
 <div id="manager-user-menu">
     <p>{{ "You're logged in as"|trans}} <em>{{ app.user.username }}</em>:</p>
     <ul>
@@ -12,4 +13,5 @@
         <li id="manager-logout"><a href="{{ url('mapbender_core_user_logout') }}">{{ "Logout"|trans }}</a></li>
     </ul>
 </div>
+{% endif %}
 
