--- a/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/frontend.html.twig
@@ -6,7 +6,7 @@
     <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <![endif]-->
-    <title>{% block title %}{% endblock %} - {{ server_name }}</title>
+    <title>{% block title %}{% endblock %} - {{ mapbender.server_name }}</title>
 {% block head %}{% endblock %}
 
     <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendercore/reset.css') }}" />
