--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -23,18 +23,24 @@
         <tr data-application-slug="{{ application.slug }}" data-application-id="{{ application.id }}">
             <td>
                 <i class="application-state icon-eye-{% if application.published %}open{% else %}close{% endif %}" title={{ 'Toggle application state quickly' | trans }}></i>
+            {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
                 <a href="{{ path('mapbender_manager_application_edit', {'slug': application.slug}) }}" title="{{ 'Edit' | trans }}">{{ application.title }}</a>
+            {% else %}
+                {{ application.title }}
+            {% endif %}
                 <a href="{{ path('mapbender_core_application_application', {'slug': application.slug}) }}" title="{{ 'View' | trans }}">({{ application.slug }})</a>
             </td>
             <td>{{ application.description }}</td>
             <td>
                 <div class="entity-actions btn-group">
                     <a class="action-view btn" href="#">{{ 'View' | trans }}</a>
+                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
                     <a class="action-edit btn" href="{{ path('mapbender_manager_application_edit',  {'slug': application.slug }) }}" title="{{ 'Edit application' | trans }}">{{ 'Edit' | trans }}</a>
+                {% endif %}
                     <a class="action-clone btn" href="#">{{ 'Clone' | trans }}</a>
-{% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
+                {% if application.source is constant('Mapbender\\CoreBundle\\Entity\\Application::SOURCE_DB') %}
                     <a class="action-delete btn btn-warning" href="{{ path('mapbender_manager_application_confirmdelete', { 'slug': application.slug }) }}">{{ 'Delete' | trans }}</a>
-{% endif %}
+                {% endif %}
                 </div>
             </td>
         </tr>
@@ -50,7 +56,5 @@ You don't have any apps defined. Start by creating one now.
 {% endif %}
 
 {% include "MapbenderManagerBundle:Application:actions.html.twig" %}
-
-{#% pager %#}
 
 {% endblock %}
