Refactored Manager into FOMManagerBundle

--- a/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MapbenderCoreBundle::backend.html.twig' %}
+{% extends 'FOMManagerBundle::manager.html.twig' %}
 
 {% block content %}
 <ul class="thumbnails">
