--- a/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
@@ -8,5 +8,5 @@
     }
 }
 %}
-{% include "MapbenderManagerBundle::actions.html.twig" %}
+{% include "FOMManagerBundle:Manager:actions.html.twig" %}
 
