--- a/src/Mapbender/ManagerBundle/Resources/views/Application/delete.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/delete.html.twig
@@ -1,4 +1,4 @@
-{% extends "MapbenderManagerBundle::manager.html.twig" %}
+{% extends "FOMManagerBundle::manager.html.twig" %}
 
 {% set application_title = application.title %}
 {% set application_id = application.id %}
