--- a/src/Mapbender/ManagerBundle/Resources/views/Element/delete.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/delete.html.twig
@@ -1,4 +1,4 @@
-{% extends "MapbenderManagerBundle::manager.html.twig" %}
+{% extends "FOMManagerBundle::manager.html.twig" %}
 
 {% block title %}{{ "Delete Element" | trans}}{% endblock %}
 
