--- a/src/Mapbender/CoreBundle/Resources/views/Application/list.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Application/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MapbenderCoreBundle::backend.html.twig' %}
+{% extends 'FOMManagerBundle::manager.html.twig' %}
 
 {% block title %}Welcome{% endblock %}
 
