--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,4 +1,4 @@
-{% extends "MapbenderManagerBundle::manager.html.twig" %}
+{% extends "FOMManagerBundle::manager.html.twig" %}
 
 {% block title %}{{ "Select Element Class" | trans}}{% endblock %}
 
