--- a/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Welcome/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FOMManagerBundle::manager.html.twig' %}
 
-{% block content %}
+{% block manager_content %}
 <ul class="thumbnails">
 {% for application in applications %}
     <li class="span3">
