--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/base.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/base.html.twig
@@ -8,6 +8,7 @@
 <nav class="action">
     <h1>Monitoring Navigation</h1>
     <ul>
+      <li><a href="{{ path('mapbender_monitoring_schedulerprofile_shownew')  }}">{% trans %}Add Scheduler{% endtrans %}</a></li>
     </ul>
 </nav>
 
