--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/index.html.twig
@@ -6,7 +6,7 @@
 <br/>
 {% if schedulers!=null %}
     <table class="listable" id="_table-scheduler" >
-        <caption>{{'Available Scheduler Definitions'|trans }}</caption>
+        <caption>{{'Available Scheduler Definitions'|trans }} {{ nowtime|date("d.m.Y H:i:s")}}</caption>
         <thead>
             <tr>
                 <th></th>
