--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/create.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/create.html.twig
@@ -1,9 +1,14 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
 {% form_theme form 'MapbenderMonitoringBundle:Form:fields.html.twig' %}
-
+{% block subnavigation %}
+<nav class="action">
+    <h1>Monitoring Navigation</h1>
+    <ul>
+      <li><a href="{{ path('mapbender_monitoring_monitoringdefinition_index')  }}">{% trans %}Back To List{% endtrans %}</a></li>
+    </ul>
+</nav>
+{% endblock %}
 {% block content %}
-    <h3 class="p-scheduler">{{"New Monitoring Definition"|trans}}</h3>
-    <div class="form-monitoring">
 	<form action="{{path("mapbender_monitoring_monitoringdefinition_add")}}" method="post">
 		{{form_widget(form)}}
 		<input type="submit" name="create" value="{{"Save"|trans}}" />
@@ -11,5 +16,4 @@
 	<form action="{{path("mapbender_monitoring_monitoringdefinition_index")}}" method="get">
 		<input type="submit" name="create" value="{{"Cancel"|trans}}" />
 	</form>
-    </div>
 {% endblock %}
