--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
@@ -5,14 +5,14 @@
 <nav class="action">
     <h1>Monitoring Navigation</h1>
     <ul>
-      <li>
-      </li>
+      <li><a href="{{ path('mapbender_monitoring_monitoringdefinition_index')  }}">{% trans %}Back To List{% endtrans %}</a></li>
+      <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv',{"mdid":md.id})  }}" target="_BLANK">{% trans %}CSV Export{% endtrans %}</a></li>
+      <!--li><a href="{#{ path('mapbender_monitoring_monitoringjob_confirmdelete',{"mdid":md.id})  }}" >{% trans %}Delete Monitoring Jobs{% endtrans %#}</a></li-->
+    
     </ul>
 </nav>
 {% endblock %}
 {% block content %}
-    <h3 class="p-scheduler">{{"Edit Monitoring Definition"|trans}}</h3>
-    <div class="form-monitoring">
 	<form action="{{path("mapbender_monitoring_monitoringdefinition_save",{"mdId":md.id})}}" method="post">
 		{{form_widget(form)}}
 		<input type="submit" name="save" value="{{"save"|trans}}" />
@@ -26,7 +26,6 @@
     <form action="{{ path('mapbender_monitoring_monitoringdefinition_run',{'mdId':md.id}) }}" method="post">
         <input type="submit" name="run" value="{% trans %}Run{% endtrans %}" />
     </form>
-    </div>
     {% if md.monitoringJobs|length > 0 %}
     <table class="listable" id="_table-job">
         <caption>{{ "Jobs"|trans }}</caption>
@@ -34,7 +33,7 @@
         <tr><th>{{"Nr"|trans}}</th><th>{{"date"|trans}}</th><th>{{"latency"|trans}}</th><th>{{"status"|trans}}</th><th>{{"changed"|trans}}</th></tr>
         </thead>
         <tbody>
-        {% set num = 0 %}
+        {#% set num = 0 %}
         {% for job in md.monitoringJobs %}
             {% if num == 0 %}
                 <tr class="job job-last"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("d.m.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>{% if job.changed %}CHANGED{% endif %}</td></tr>
@@ -44,6 +43,15 @@
                 {% endif %}
             {% endif %}
             {% set num = num+1 %}
+        {% endfor %#}
+        {% for job in lastjobs %}
+            <tr class="job job-last"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("d.m.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>{% if job.changed %}CHANGED{% endif %}</td></tr>
+            {#% elseif num < 10 %}
+                {% if job.changed %}
+                <tr class="job job-previous"><td class="job-id">{{ job.id }}</td><td>{{ job.timestamp|date("d.m.Y H:i:s")}}</td><td>{{ job.latency }} ms</td><td>{{ job.status }}</td><td>CHANGED</td></tr>
+                {% endif %}
+            {% endif %}
+            {% set num = num+1 %#}
         {% endfor %}
         </tbody>
     </table>
