--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringJob/confirmdelete.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringJob/confirmdelete.html.twig
@@ -1,12 +1,11 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
 
-{% block title %}{% trans %}Delete{% endtrans %} "{{ md.title }}"{% endblock %}
+{% block title %}{% trans %}Delete Monitoring Jobs From{% endtrans %} "{{ md.title }}"{% endblock %}
 
 {% block content %}
   <div class="message">
-    <p>{% trans %}Really Delete{% endtrans %} "{{md.title }}" ?</p>
-    <form action="{{path("mapbender_monitoring_monitoringdefinition_delete")}}" method="post">
-      <input type="hidden" value="{{md.id}}" />
+    <p>{% trans %}Really Delete Monitoring Jobs From{% endtrans %} "{{md.title }}" ?</p>
+    <form action="{{path("mapbender_monitoring_monitoringjob_delete",{"mdid":md.id})}}" method="post">
       <button>{% trans %}Delete{% endtrans%}</button>
       <a class="button" href="{{ path("mapbender_monitoring_monitoringdefinition_edit",{'mdId': md.id}) }}">{% trans %}Cancel{% endtrans %}</a>
     </form>
