--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/edit.html.twig
@@ -1,21 +1,28 @@
 {% extends "MapbenderMonitoringBundle:SchedulerProfile:index.html.twig" %}
-
+{% block subnavigation %}
+<nav class="action">
+    <h1>Monitoring Navigation</h1>
+    <ul>
+      <li><a href="{{ path('mapbender_monitoring_schedulerprofile_index')  }}">{% trans %}Back To List{% endtrans %}</a></li>
+    </ul>
+</nav>
+{% endblock %}
 {% block content %}
+<a class="a-scheduler" href="{{path("mapbender_monitoring_schedulerprofile_index")}}">{{"to_scheduler_list"|trans}}</a><br/>
+
 {% if scheduler.id!=null %}
-    <h3 class="p-scheduler">{{"Edit Scheduler"|trans}}</h3>
-    <div class="form-monitoring">
-        <form action="{{path("mapbender_monitoring_schedulerprofile_edit",{"spId":scheduler.id})}}" method="post">
-            {{form_widget(form)}}
-            <input type="submit" name="save" value="{{"save"|trans}}" />
-        </form>
-    </div>
+    <p class="p-scheduler">{{"new scheduler"|trans}}</p>
+    <form action="{{path("mapbender_monitoring_schedulerprofile_edit",{"spId":scheduler.id})}}" method="post">
+		{{form_widget(form)}}
+		<input type="submit" name="save" value="{{"save"|trans}}" />
+	</form>
 {% else %}
-    <h3 class="p-scheduler">{{"New Scheduler"|trans}}</h3>
-    <div class="form-monitoring">
-        <form action="{{path("mapbender_monitoring_schedulerprofile_new")}}" method="post">
-            {{form_widget(form)}}
-            <input type="submit" name="save" value="{{"save"|trans}}" />
-        </form>
-    </div>
+    <p class="p-scheduler">{{"edit scheduler"|trans}}</p>
+    <form action="{{path("mapbender_monitoring_schedulerprofile_new")}}" method="post">
+		{{form_widget(form)}}
+		<input type="submit" name="save" value="{{"save"|trans}}" />
+	</form>
+
 {% endif %}
+    
 {% endblock %}
