--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
@@ -14,6 +14,13 @@
 {% block content %}
 
 {% if mdList|length >0 %}
+    <div class="tablenav">
+        <a href="{{ path("mapbender_monitoring_monitoringdefinition_index",{"offset":0}) }}">{% trans %}Start{% endtrans %}</a> 
+        <a href="{{ path("mapbender_monitoring_monitoringdefinition_index",{"offset":prevOffset}) }}">{% trans %}Previous{% endtrans %}</a> 
+        <span>{% trans with{'%start%': offset +1, '%end%': offset + mdList|length, '%total%' : total} %} Showing %start% to %end% of %total%{% endtrans %}</span>
+        <a href="{{  path("mapbender_monitoring_monitoringdefinition_index",{"offset": nextOffset}) }}">{% trans %}Next{% endtrans %}</a>
+        <a href="{{ path("mapbender_monitoring_monitoringdefinition_index",{"offset": lastOffset}) }}">{% trans %}End{% endtrans %}</a> 
+    </div>
 	<table class="listable" >
     <caption>{% trans %}Available Monitoring Definitions{% endtrans %}</caption>
 		<thead>
@@ -43,5 +50,5 @@
 {% else %}
  <p>{% trans %}No Monitoring Definitions available{% endtrans %}</p>
 {% endif %}
- <a href="{{path('mapbender_monitoring_schedulerprofile_index')}}">{{"config_scheduler"|trans}}</a>
+ <!--a href="{#{path('mapbender_monitoring_schedulerprofile_index')}}">{{"config_scheduler"|trans}#}</a-->
 {% endblock %}
