csv export for monitoringjob changed

--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/edit.html.twig
@@ -6,7 +6,7 @@
     <h1>Monitoring Navigation</h1>
     <ul>
       <li><a href="{{ path('mapbender_monitoring_monitoringdefinition_index')  }}">{% trans %}Back To List{% endtrans %}</a></li>
-      <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv',{"mdid":md.id})  }}" target="_BLANK">{% trans %}CSV Export{% endtrans %}</a></li>
+      <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv',{"mdid":md.id})  }}" >{% trans %}CSV Export{% endtrans %}</a></li>
       <!--li><a href="{#{ path('mapbender_monitoring_monitoringjob_confirmdelete',{"mdid":md.id})  }}" >{% trans %}Delete Monitoring Jobs{% endtrans %#}</a></li-->
     
     </ul>
