--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Monitoring Navigation</h1>
     <ul>
       <li><a href="{{ path('mapbender_monitoring_monitoringdefinition_create')  }}">{% trans %}Add Monitoring Definition{% endtrans %}</a></li>
-      <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv')  }}" target="_BLANK">{% trans %}CSV Export{% endtrans %}</a></li>
+      <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv')  }}" >{% trans %}CSV Export{% endtrans %}</a></li>
       <!--li><a href="{#{ path('mapbender_monitoring_monitoringjob_confirmdeleteall')  }#}" >{#% trans %}Delete All Monitoring Jobs{% endtrans %#}</a></li-->
     </ul>
 </nav>
