find/get/set styles and find EX_GeographicBoundingBox changed

--- a/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Form/fields.html.twig
@@ -45,7 +45,7 @@
         {% if value.dataurl is not empty %}
         {{ form_row(form.dataurl) }} 
         {% endif %}
-        {{ form_row(form.styles) }} 
+        {{ form_row(form.stylesserialized) }} 
     </div>
     <div>
         {% if value.fixedWidth is not empty %}
