delete monitoring job added

--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/confirmdelete.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/confirmdelete.html.twig
@@ -1,6 +1,6 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
 
-{% block title %}{% trans %}Delete{% endtrans %} "{{ md.title }}"{% endblock %}
+{% block title %}{% trans %}Monitoring Definition Delete{% endtrans %} "{{ md.title }}"{% endblock %}
 
 {% block content %}
   <div class="message">
