--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/create.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/create.html.twig
@@ -1,5 +1,6 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
 {% form_theme form 'MapbenderMonitoringBundle:Form:fields.html.twig' %}
+{% block title %}{{ "Monitoring Definition New"|trans }}{% endblock %}
 {% block subnavigation %}
 <nav class="action">
     <h1>Monitoring Navigation</h1>
