--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringDefinition/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
-
+{% block title %}{{ "Monitoring Definition Index"|trans }}{% endblock %}
 {% block heading %}{{ "Monitoring Definition Index"|trans }}{% endblock %}
 {% block subnavigation %}
 <nav class="action">
@@ -7,7 +7,7 @@
     <ul>
       <li><a href="{{ path('mapbender_monitoring_monitoringdefinition_create')  }}">{% trans %}Add Monitoring Definition{% endtrans %}</a></li>
       <li><a href="{{ path('mapbender_monitoring_monitoringjob_exportcsv')  }}" >{% trans %}CSV Export{% endtrans %}</a></li>
-      <!--li><a href="{#{ path('mapbender_monitoring_monitoringjob_confirmdeleteall')  }#}" >{#% trans %}Delete All Monitoring Jobs{% endtrans %#}</a></li-->
+      <li><a class="confirmdelete" href="{{ path('mapbender_monitoring_monitoringjob_delete')  }}" title="{% trans %}Delete All Monitoring Jobs{% endtrans %}" >{% trans %}Delete All Monitoring Jobs{% endtrans %}</a></li>
     </ul>
 </nav>
 {% endblock %}
@@ -47,6 +47,43 @@
 			{% endfor %}
 		</tbody>
 	</table>
+<script type="text/javascript">
+    // delete from table
+    $("li a.confirmdelete").bind("click",function(e){
+      var $anchor = $(this);
+      var title = $anchor.attr("title")? $anchor.attr("title"):"Delete";
+      $("<div>Really Delete ?</div>").dialog({
+        title: title,
+        buttons: {
+          "Yes": function(){ 
+            //FIXME: just add class to application
+            $("body").css("cursor","wait");
+            $.ajax({
+              url: $anchor.attr("href"),
+              type: 'POST',
+              data: {},
+              success: function(){
+                window.location.href = window.location.href;
+              },
+              error: function(data){
+                $("body").css("cursor","");
+                $("<div>Could not delete.</div>").dialog({
+                  title: "Delete " + title,
+                  autoOpen: true,
+                  buttons:{
+                    "OK": function(){ $(this).dialog("destroy"); }
+                  }
+                }); 
+              }
+            });
+            $(this).dialog("destroy"); 
+          },
+          "No": function(){ $(this).dialog("destroy"); }
+        }
+      });
+      return false;
+    });
+</script>
 {% else %}
  <p>{% trans %}No Monitoring Definitions available{% endtrans %}</p>
 {% endif %}
