--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/confirmdelete.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/confirmdelete.html.twig
@@ -1,6 +1,6 @@
 {% extends "MapbenderMonitoringBundle:MonitoringDefinition:base.html.twig" %}
 
-{% block title %}{% trans %}Delete{% endtrans %} "{{ sp.title }}"{% endblock %}
+{% block title %}{% trans %}Sceduler Delete{% endtrans %} "{{ sp.title }}"{% endblock %}
 
 {% block content %}
   <div class="message">
