--- a/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/edit.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/SchedulerProfile/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends "MapbenderMonitoringBundle:SchedulerProfile:index.html.twig" %}
+{% block title %}{{ "Scheduler New/Edit"|trans }}{% endblock %}
 {% block subnavigation %}
 <nav class="action">
     <h1>Monitoring Navigation</h1>
