--- a/src/Mapbender/MonitoringBundle/Resources/views/MonitoringJob/index.html.twig
+++ b/src/Mapbender/MonitoringBundle/Resources/views/MonitoringJob/index.html.twig
@@ -1,4 +1,5 @@
 {% extends "MapbenderMonitoringBundle:MonitoringJob:base.html.twig" %}
+{% block title %}{{ "Monitoring Job Index"|trans }}{% endblock %}
 
 {% block heading %}{{ "Monitoring Job Index"|trans }}{% endblock %}
 
