--- a/src/Mapbender/ManagerBundle/Resources/views/Layer/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Layer/index.html.twig
@@ -1,7 +1,7 @@
-{% extends "MapbenderManagerBundle::manager.html.twig" %}
+{% extends "FOMManagerBundle::manager.html.twig" %}
 
 {% block title %}{{ 'Layers' | trans }}{% endblock %}
 
 {% block manager_content %}
-Hello World!
+<p>The service repository is not yet ready.</p>
 {% endblock %}
