wms repository entities added

--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
@@ -30,6 +30,6 @@
 </table>
 
 <div class="repository-actions btn-group">
-    <a class="action-add btn btn-primary" href="#" title="{{ 'Add new source' | trans }}">{{ 'Add' | trans }}</a>
+    <a class="action-add btn btn-primary" href="{{ url("mapbender_manager_repository_new") }}" title="{{ 'Add new source' | trans }}">{{ 'Add' | trans }}</a>
 </div>
 {% endblock %}
