--- a/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/new.html.twig
@@ -4,6 +4,10 @@
 
 {% block manager_content %}
 
-{{ foo }}
+    {{ form_errors(form) }}
+    <form action="{{path('mapbender_wms_repository_create')}}" method="post">
+        {{form_rest(form)}}
+        <input type="submit" name="load" value="{{"Load"|trans}}" />
+    </form>
 
 {% endblock %}
