--- a/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Template/fullscreen.html.twig
@@ -26,6 +26,12 @@
 {% endfor %}
 {% endif %}
 </div>
+<div id="footer" class="region">
+{% if application.elements.footer is defined %}
+{% for element in application.elements.footer %}
+    {{ element.render() | raw }}
+{% endfor %}
+{% endif %}
 <script type="text/javascript">
     var Mapbender = Mapbender || {};
     Mapbender.configuration = {{ application.configuration.dump | raw }}</script>
